# automated-reasoning

./: .gitignore  404.html  Dockerfile.api  Dockerfile.solver  README.md  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  render.yaml
.github/: copilot-instructions.md
.github/workflows/: gh-pages.yml
api/: __main__.py  app.py  config.py  dependencies.py  util.py
api/app/: index.html
api/events/: result_stream.py
api/repository/: rabbitmq_repository.py  redis_repository.py
api/routes/: problems_routes.py  puzzle.py  sat_routes.py  status.py
api/schemas/: sudoku.py
clients/: __init__.py  config.py  rabbitmg_client.py  redis_client.py
clients/rabbitmq_client/: index.html
clients/redis_client/: index.html
clients/schemas/: problems.py
clients/schemas/sat/: sudoku.py
docs/: index.md  problems.md
docs/api/: app.md
docs/clients/: rabbitmq_client.md  redis_client.md
docs/getting-started/: usage.md
docs/solver/: main.md  worker.md
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/usage/: index.html
problems/: index.html
scripts/: entrypoint.sh
search/: search_index.json
solver/: config.py  main.py  rabbitmq_client.py  redis_client.py  solver.py
solver/main/: index.html
solver/worker/: index.html
src/: config.py
src/api/: config.py  dependencies.py  main.py  util.py
src/api/repository/: models.py  rabbitmq_repository.py  redis_repository.py
src/api/routes/: ip_routes.py  problems_routes.py  puzzle.py  sat_routes.py
src/clients/: __init__.py  config.py  rabbitmg_client.py  rabbitmq_sync_client.py  redis_client.py  redis_sync_client.py  util.py
src/puzzler_api/: Dockerfile
src/solver/: README.md  config.py  engine.py  main.py  rabbitmq_client.py  redis_client.py  solver.py  worker.py
(+30 files in other folders)
