[tool.poetry]
name = "automated-reasoning"
version = "0.1.0"
description = "Automated Reasoning"
authors = ["Giray Coskun <giraycoskun.dev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.4.8"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
