[project]
name = "automated-reasoning"
version = "0.1.0"
description = "Automated Reasoning"
authors = [
	{ name = "Giray Coskun", email = "giraycoskun.dev@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13,<3.14"

dependencies = [
	"fastapi>=0.115.5",
	"uvicorn[standard]>=0.32.1",
	"loguru>=0.7.2",
	"python-dotenv>=1.0.1",
	"pika>=1.3.2",
	"redis>=5.2.1",
	"sse-starlette>=1.8.2",
	"pulp>=2.7.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.11",
]
