[project]
name = "automated-reasoning"
version = "0.1.0"
description = "Automated Reasoning"
authors = [
	{ name = "Giray Coskun", email = "giraycoskun.dev@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13,<3.14"

dependencies = [
	"fastapi>=0.115.5",
	"uvicorn[standard]>=0.32.1",
	"loguru>=0.7.2",
	"python-dotenv>=1.0.1",
	"pika>=1.3.2",
	"redis[hiredis]>=5.2.1",
	"sse-starlette>=1.8.2",
	"pulp>=2.7.0",
	"aio-pika>=9.5.8",
	"msgpack>=1.1.2",
	"ortools>=9.15.6755",
	"pysat>=3.2.2",
	"python-sat[aiger,pblib]>=1.8.dev26",
]

[dependency-groups]
dev = [
    "mkdocs-material>=9.7.1",
    "mkdocs-mermaid2-plugin>=1.2.3",
    "mkdocstrings[python]>=1.0.0",
    "pymdown-extensions>=10.20",
    "ruff>=0.14.11",
]
